--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "firebase": "^10.12.5",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "openai": "^4.56.0",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
