--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@stripe/stripe-js": "^4.3.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/stripe-js": "^4.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.5",
+    "framer-motion": "^11.3.28",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "openai": "^4.56.0",
